# GCR-Google-Calendar-RAT

./: .gitignore  LICENSE  README.md  gcr-client.py  gcr.py  howtouse-gcr-client.md  pyproject.toml  requirements.txt
tests/: conftest.py  test_setup_validation.py
